--- a/plugins/Python/CMakeLists.txt
+++ b/plugins/Python/CMakeLists.txt
@@ -80,7 +80,9 @@ foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
 	set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 endforeach(CONF CMAKE_CONFIGURATION_TYPES)
 
-set(CMAKE_DEBUG_POSTFIX "d")
+if(NOT CMAKE_DEBUG_POSTFIX)
+  set(CMAKE_DEBUG_POSTFIX "d")
+endif()
 set(CMAKE_RELEASE_POSTFIX "")
 set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")
 set(CMAKE_MINSIZEREL_POSTFIX "s")
@@ -123,4 +125,4 @@ install( TARGETS ${PROJECT_NAME}
          ARCHIVE DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
          RUNTIME DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/bin)
 		 
-set_property(TARGET MinVR_OpenGL PROPERTY FOLDER "plugins")
+set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "plugins")
