--- a/plugins/VRPN/CMakeLists.txt
+++ b/plugins/VRPN/CMakeLists.txt
@@ -127,7 +127,9 @@ foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
 	set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 endforeach(CONF CMAKE_CONFIGURATION_TYPES)
 
-set(CMAKE_DEBUG_POSTFIX "d")
+if(NOT CMAKE_DEBUG_POSTFIX)
+  set(CMAKE_DEBUG_POSTFIX "d")
+endif()
 set(CMAKE_RELEASE_POSTFIX "")
 set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")
 set(CMAKE_MINSIZEREL_POSTFIX "s")
