Added TUIO plugin. - Linked TUIO library to plugin. - Implemented TUIO device for touch events. - Made TUIO plugin optional and cleaned up code. - Updated CMakeLists for TUIO to account for debug postfix. - Fixed issues with TUIO windows build. - Fixed issue with VRPN CMakeLists where debug library was included in release.

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -54,6 +54,12 @@ if (MINVR_THREADING_PLUGIN OR BASE_PLUGINS)
 	add_subdirectory (Threading)
 endif()
 
+#------------------TUIO-----------------------------
+option(MINVR_TUIO_PLUGIN "If enabled, TUIO plugin will be installed" OFF)
+if (MINVR_TUIO_PLUGIN)
+	add_subdirectory (TUIO)
+endif()
+
 #------------------OpenVR-----------------------------
 option(MINVR_OPENVR_PLUGIN "If enabled, OpenVR plugin will be installed" OFF)
 if (MINVR_OPENVR_PLUGIN)
