Added simple VR Application abstraction. - Added MinVR graphics API - Created minimal graphics example - Created modern shader example application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,8 +125,7 @@ include_directories(
 
 add_subdirectory(src)
 add_subdirectory(plugins)
-add_subdirectory(examples/SimpleOpenGL)
-add_subdirectory(examples/ConfigExample)
+add_subdirectory(examples)
 add_subdirectory(tests/config)
 
 
