--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,6 +122,18 @@ set(vr_main_cpp
   ${vr_src_dir}/main/impl/VRDefaultAppLauncher.cpp
 )
 
+set(vr_api_cpp
+  ${vr_src_dir}/api/graphics/VRGraphicsApp.cpp
+  ${vr_src_dir}/api/graphics/VRGraphicsHandler.cpp
+  ${vr_src_dir}/api/graphics/VRGraphicsState.cpp
+)
+
+set(vr_api_h
+  ${vr_src_dir}/api/graphics/VRGraphicsApp.h
+  ${vr_src_dir}/api/graphics/VRGraphicsHandler.h
+  ${vr_src_dir}/api/graphics/VRGraphicsState.h
+)
+
 set(vr_main_h_main
   ${vr_src_dir}/main/VREventHandler.h
   ${vr_src_dir}/main/VRFactory.h
@@ -178,6 +190,7 @@ set(vr_plugin_h
 set(vr_sources 
   ${vr_config_cpp} ${vr_config_h}
   ${vr_display_cpp} ${vr_display_h}
+  ${vr_api_cpp} ${vr_api_h}
   ${vr_input_h}
   ${vr_main_cpp} ${vr_main_h}
   ${vr_math_cpp} ${vr_math_h}
@@ -189,6 +202,8 @@ source_group("config\\Header Files" FILES ${vr_config_h})
 source_group("config\\Source Files" FILES ${vr_config_cpp})
 source_group("display\\Header Files" FILES ${vr_display_h})
 source_group("display\\Source Files" FILES ${vr_display_cpp})
+source_group("api\\Header Files" FILES ${vr_api_h})
+source_group("api\\Source Files" FILES ${vr_api_cpp})
 source_group("input\\Header Files" FILES ${vr_input_h})
 source_group("input\\Source Files" FILES ${vr_input_cpp})
 source_group("main\\Header Files" FILES ${vr_main_h})
@@ -213,6 +228,7 @@ install(FILES ${vr_config_h_cxml}
 install(FILES ${vr_config_h_base}
   DESTINATION ${CMAKE_INSTALL_PREFIX}/include/config/base64)
 install(FILES ${vr_display_h} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/display)
+install(FILES ${vr_api_h} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/api)
 install(FILES ${vr_input_h} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/input)
 install(FILES ${vr_main_h} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/main)
 install(FILES ${vr_math_h} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/math)
