Cleaned up header API - Added VRApp subclass. - Removed requirement for Context render callback. - Added graphics render handler implementation. - Rearranged MinVR API to src/api and src/api/impl - Used opaque references.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,24 +123,25 @@ set(vr_main_cpp
 )
 
 set(vr_api_cpp
-  ${vr_src_dir}/api/graphics/VRGraphicsApp.cpp
-  ${vr_src_dir}/api/graphics/VRGraphicsHandler.cpp
-  ${vr_src_dir}/api/graphics/VRGraphicsState.cpp
+  ${vr_src_dir}/api/impl/VRApp.cpp
+  ${vr_src_dir}/api/impl/VRGraphicsHandler.cpp
+  ${vr_src_dir}/api/impl/VRGraphicsState.cpp
 )
 
 set(vr_api_h
-  ${vr_src_dir}/api/graphics/VRGraphicsApp.h
-  ${vr_src_dir}/api/graphics/VRGraphicsHandler.h
-  ${vr_src_dir}/api/graphics/VRGraphicsState.h
+  ${vr_src_dir}/api/VRApp.h
+  ${vr_src_dir}/api/VRGraphicsApp.h
+  ${vr_src_dir}/api/VRGraphicsHandler.h
+  ${vr_src_dir}/api/VRGraphicsState.h
+  ${vr_src_dir}/api/VRRenderHandler.h
+  ${vr_src_dir}/api/VREventHandler.h
 )
 
 set(vr_main_h_main
-  ${vr_src_dir}/main/VREventHandler.h
   ${vr_src_dir}/main/VRFactory.h
   ${vr_src_dir}/main/VRItemFactory.h
   ${vr_src_dir}/main/VRMain.h
   ${vr_src_dir}/main/VRMainInterface.h
-  ${vr_src_dir}/main/VRRenderHandler.h
   ${vr_src_dir}/main/VRAppLauncher.h
 )
 
