--- a/plugins/VRPN/CMakeLists.txt
+++ b/plugins/VRPN/CMakeLists.txt
@@ -30,7 +30,7 @@ if (BUILD_VRPN)
 		include(ExternalProject)
 		set(vrpn_PREFIX "${vrpn_checkout_Dir}")
 		set(vrpn_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}/vrpn")
-		set(vrpn_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${vrpn_INSTALL_DIR} -DVRPN_BUILD_DIRECTSHOW_VIDEO_SERVER=OFF -DVRPN_BUILD_HID_GUI=OFF -DVRPN_BUILD_JAVA=OFF -DVRPN_BUILD_PYTHON=OFF -DVRPN_USE_DIRECTINPUT=OFF -DVRPN_USE_DIRECTSHOW=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
+		set(vrpn_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${vrpn_INSTALL_DIR} -DVRPN_BUILD_DIRECTSHOW_VIDEO_SERVER=OFF -DVRPN_BUILD_HID_GUI=OFF -DVRPN_BUILD_JAVA=OFF -DVRPN_BUILD_PYTHON=OFF -DVRPN_USE_DIRECTINPUT=OFF -DVRPN_USE_DIRECTSHOW=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -Wno-dev)
 		set(vrpn_DIR "${vrpn_INSTALL_DIR}")
 
 
