--- a/tests-interactive/opengl-fixedfuncpipeline/CMakeLists.txt
+++ b/tests-interactive/opengl-fixedfuncpipeline/CMakeLists.txt
@@ -24,7 +24,7 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 endif()
 
 
-add_executable(${PROJECT_NAME} ${source_files})
+add_executable(${PROJECT_NAME} ${source_files} ${config_files})
 
 target_link_libraries(${PROJECT_NAME} MinVR ${OPENGL_gl_LIBRARY} ${ALL_LIBS})
 
