Added GLFW Timer input device for cross platform frame timing data.

--- a/plugins/GLFW/CMakeLists.txt
+++ b/plugins/GLFW/CMakeLists.txt
@@ -3,6 +3,7 @@ project(MinVR_GLFW)
 set (SOURCEFILES 
   src/glew.c
   src/VRGLFWInputDevice.cpp
+  src/VRGLFWTimer.cpp
   src/VRGLFWPlugin.cpp
   src/VRGLFWWindowToolkit.cpp
 )
