major rework to enable loading config files from a central installed location.  also impacts command line.  run one of the interative tests with -h to see command line help

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,12 @@
 
 project(libMinVR)
 
+
+set(vr_config_files
+  ${vr_src_dir}/../config/desktop.minvr
+)
+
+
 set(vr_config_cpp
   ${vr_src_dir}/config/VRDataIndex.cpp
   ${vr_src_dir}/config/VRDataQueue.cpp
@@ -118,15 +124,6 @@ set(vr_input_h
   ${vr_src_dir}/input/VRInputDevice.h
 )
 
-set(vr_main_cpp
-  ${vr_src_dir}/main/VREventInternal.cpp
-  ${vr_src_dir}/main/VRFactory.cpp
-  ${vr_src_dir}/main/VRGraphicsHandler.cpp
-  ${vr_src_dir}/main/VRGraphicsStateInternal.cpp
-  ${vr_src_dir}/main/VRMain.cpp
-  ${vr_src_dir}/main/impl/VRDefaultAppLauncher.cpp
-)
-
 set(vr_api_cpp
   ${vr_src_dir}/api/impl/VRApp.cpp
   ${vr_src_dir}/api/impl/VREvent.cpp
@@ -140,7 +137,17 @@ set(vr_api_h
   ${vr_src_dir}/api/VRGraphicsState.h
 )
 
-set(vr_main_h_main
+set(vr_main_cpp
+  ${vr_src_dir}/main/VRAppLauncher.cpp
+  ${vr_src_dir}/main/VREventInternal.cpp
+  ${vr_src_dir}/main/VRFactory.cpp
+  ${vr_src_dir}/main/VRGraphicsHandler.cpp
+  ${vr_src_dir}/main/VRGraphicsStateInternal.cpp
+  ${vr_src_dir}/main/VRLocalAppLauncher.cpp
+  ${vr_src_dir}/main/VRMain.cpp
+)
+
+set(vr_main_h
   ${vr_src_dir}/main/VRAppLauncher.h
   ${vr_src_dir}/main/VREventHandler.h
   ${vr_src_dir}/main/VREventInternal.h
@@ -148,18 +155,10 @@ set(vr_main_h_main
   ${vr_src_dir}/main/VRGraphicsHandler.h
   ${vr_src_dir}/main/VRGraphicsStateInternal.h
   ${vr_src_dir}/main/VRItemFactory.h
+  ${vr_src_dir}/main/VRLocalAppLauncher.h
   ${vr_src_dir}/main/VRMain.h
   ${vr_src_dir}/main/VRMainInterface.h
   ${vr_src_dir}/main/VRRenderHandler.h
-)
-
-set(vr_main_h_impl
-  ${vr_src_dir}/main/impl/VRDefaultAppLauncher.h
-)
-
-set(vr_main_h
-  ${vr_main_h_main}
-  ${vr_main_h_impl}
 )
 
 set(vr_math_cpp
@@ -196,7 +195,8 @@ set(vr_plugin_h
   ${vr_src_dir}/plugin/VRSharedLibrary.h
 )
 
-set(vr_sources 
+set(vr_sources
+  ${vr_config_files}
   ${vr_config_cpp} ${vr_config_h}
   ${vr_display_cpp} ${vr_display_h}
   ${vr_api_cpp} ${vr_api_h}
@@ -223,6 +223,10 @@ source_group("net\\Header Files" FILES ${vr_net_h})
 source_group("net\\Source Files" FILES ${vr_net_cpp})
 source_group("plugin\\Header Files" FILES ${vr_plugin_h})
 source_group("plugin\\Source Files" FILES ${vr_plugin_cpp})
+
+set_source_files_properties(${vr_config_files} PROPERTIES HEADER_FILE_ONLY TRUE)
+source_group("Config Files" FILES ${vr_config_files})
+
 
 add_library(MinVR ${vr_sources})
 
