--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ project(libMinVR)
 
 set(vr_config_files
   ${vr_src_dir}/../config/3DTV.minvr
+  ${vr_src_dir}/../config/default.minvr
   ${vr_src_dir}/../config/desktop-oldopengl.minvr
   ${vr_src_dir}/../config/desktop.minvr
   ${vr_src_dir}/../config/HTC_Vive.minvr
