moved MVRLookup to a utils direcotry and updated cmake to build and install it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ add_subdirectory(src)
 add_subdirectory(plugins)
 add_subdirectory(tests-batch)
 add_subdirectory(tests-interactive)
+add_subdirectory(utils)
 
 
 # Organize folder structure for Xcode, Visual Studio, etc.
