--- a/plugins/Threading/CMakeLists.txt
+++ b/plugins/Threading/CMakeLists.txt
@@ -120,3 +120,6 @@ install( TARGETS ${PROJECT_NAME}
          LIBRARY DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
          ARCHIVE DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/lib
          RUNTIME DESTINATION ${VRPlugins_install_dir}/${PROJECT_NAME}/bin)
+
+		 
+set_property(TARGET MinVR_Threading PROPERTY FOLDER "plugins")
