--- a/tests-interactive/opengl-shaderpipeline/CMakeLists.txt
+++ b/tests-interactive/opengl-shaderpipeline/CMakeLists.txt
@@ -5,6 +5,8 @@ find_package(OpenGL REQUIRED)
 
 include_directories(${OPENGL_INCLUDE_DIR})
 
+include_directories(${PROJECT_SOURCE_DIR})
+
 set(source_files
   glew.c
   main.cpp
