Added include directory for multithreaded test.

--- a/tests-interactive/opengl-multithreaded/CMakeLists.txt
+++ b/tests-interactive/opengl-multithreaded/CMakeLists.txt
@@ -4,6 +4,7 @@ project(itest-opengl-multithreaded)
 find_package(OpenGL REQUIRED)
 
 include_directories(${OPENGL_INCLUDE_DIR})
+include_directories(${PROJECT_SOURCE_DIR})
 
 set(source_files
   glew.c
