Added shared context Id.

--- a/tests-interactive/opengl-multithreaded/CMakeLists.txt
+++ b/tests-interactive/opengl-multithreaded/CMakeLists.txt
@@ -31,12 +31,44 @@ source_group("Header Files" FILES ${header_files})
 set_source_files_properties(${config_files} PROPERTIES HEADER_FILE_ONLY TRUE)
 source_group("Config Files" FILES ${config_files})
 
-if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	find_package(Threads)
-	find_package(X11)
-	set(ALL_LIBS ${ALL_LIBS} ${CMAKE_THREAD_LIBS_INIT} rt Xrandr Xxf86vm Xi m dl ${X11_LIBRARIES})
+#------------------------------------------
+# Specific preprocessor defines
+#------------------------------------------
+
+# Windows Section #
+if (MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+    # Tell MSVC to use main instead of WinMain for Windows subsystem executables
+    set_target_properties(${WINDOWS_BINARIES} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif()
 
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
+	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
+	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+	find_library(COCOA_LIB Cocoa)
+	find_library(IOKIT_LIB IOKit)
+	find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
+    	find_library(CORE_VIDEO_FRAMEWORK CoreVideo)
+	set(LIBS_ALL ${LIBS_ALL} ${COCOA_LIB} ${IOKIT_LIB} ${CORE_FOUNDATION_FRAMEWORK} ${CORE_VIDEO_FRAMEWORK})
+	message(STATUS "${CORE_VIDEO_FRAMEWORK}")
+endif()
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  endif()
+  find_package(Threads)
+  find_package(X11)
+  set(ALL_LIBS ${ALL_LIBS} ${CMAKE_THREAD_LIBS_INIT} rt Xrandr Xxf86vm Xi m dl ${X11_LIBRARIES})
+endif()
+
+#------------------------------------------
+# Build Application
+#------------------------------------------
 
 add_executable(${PROJECT_NAME} ${source_files} ${config_files} ${header_files})
 
