Used third party GLEW for multithreaded test.

--- a/tests-interactive/opengl-multithreaded/CMakeLists.txt
+++ b/tests-interactive/opengl-multithreaded/CMakeLists.txt
@@ -3,11 +3,13 @@ project(itest-opengl-multithreaded)
 
 find_package(OpenGL REQUIRED)
 
-include_directories(${OPENGL_INCLUDE_DIR})
-include_directories(${PROJECT_SOURCE_DIR})
+include_directories(
+	${OPENGL_INCLUDE_DIR}
+	${CMAKE_SOURCE_DIR}/third-party/GLEW
+)
 
 set(source_files
-  glew.c
+  ${CMAKE_SOURCE_DIR}/third-party/GLEW/glew.c
   main.cpp
   MyAppModel.cpp
   MyAppController.cpp
