--- a/tests-batch/config/CMakeLists.txt
+++ b/tests-batch/config/CMakeLists.txt
@@ -8,7 +8,7 @@ set (dataindextests datum index queue)
 # The numbers here correspond to 'case' statements in the respective
 # test program.  See, e.g., datumtest.cpp
 set (datum_parts 1 2 3 4 5 6 7 8 9 10)
-set (index_parts 1 2 3 4 5 6 7 8 9 10 11 12)
+set (index_parts 1 2 3 4 5 6 7 8 9 10 11 12 13)
 set (queue_parts 1 2 3)
 
 # For tests where a list of parts has not been defined we add a default of 1:
