--- a/tests-batch/CMakeLists.txt
+++ b/tests-batch/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(config)
+add_subdirectory(main)
 #add_subdirectory(eventdata)
 #add_subdirectory(eventhandler)
 #add_subdirectory(plugin)
